# spock-test

./: README.md  spock-test.cabal
app/: Api.hs  Env.hs  Main.hs  Trans.hs  WebConfig.hs  test.json
app/Views/: Home.hs
app/config/: config.json
app/views/: Home.hs
