name:                spock-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/spock-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable spock-test
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text
                     , http-types
                     , http-client
                     , lucid
                     , Spock-lucid
                     , aeson
                     , lens-aeson
                     , wreq
                     , lens
                     , bytestring
                     , transformers
                     , containers
